[project]
name = "gallery"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet>=0.70.0.dev0"
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "com.mycompany"
product = "gallery"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[dependency-groups]
dev = [
    "flet[all]>=0.70.0.dev0",
]

[tool.uv]
prerelease = "allow"