[project]
name = "gallery"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet-charts",
  "flet-audio",
  "flet-video",
  "flet",
  "flet-web",
  "objgraph"
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "com.mycompany"
product = "gallery"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[dependency-groups]
dev = [
    "flet-cli",
    "flet-desktop",
]
